--- a/src/assets/css/reset.css
+++ b/src/assets/css/reset.css
@@ -1,8 +1,32 @@
-body, h1, h2, h3, ul, li {
-    margin: 0;
-    padding: 0;
-  }
-  
-  img {
-    vertical-align: top;
-  }
+html {
+  line-height: 1.2;
+  -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
+  -webkit-user-select: none;
+  -moz-user-focus: none;
+  -moz-user-select: none;
+}
+
+body,
+h1,
+h2,
+h3,
+h4,
+ul,
+li {
+  padding: 0;
+  margin: 0;
+}
+
+ul,
+li {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+  color: #333;
+}
+
+img {
+  vertical-align: top;
+}
